# agent-harness-suite

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
configs/: lite.yaml  smoke.yaml
src/agent_harness_suite/: __init__.py  __main__.py  adapter.py  cli.py  config.py  registry.py  runner.py  types.py
src/agent_harness_suite/adapters/: __init__.py  claude_agent.py  copilot.py
src/agent_harness_suite/harnesses/: __init__.py  base.py  claude_harness.py  copilot_harness.py
src/agent_harness_suite/metrics/: __init__.py  collector.py  reporter.py
src/agent_harness_suite/scenarios/: __init__.py  base.py  repo_to_plan.py
src/ahs/: __init__.py  runner.py
src/ahs/benchmarks/: __init__.py  _smoke.py  _terminal_bench.py
src/ahs/harnesses/: __init__.py  registry.py
src/ahs/models/: __init__.py  registry.py
tests/: conftest.py  test_adapter.py  test_bridge_redirect.py  test_config.py  test_end_to_end.py  test_metrics.py  test_repo_to_plan.py  test_terminal_bench.py  test_token_accounting.py
