[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness-suite"
version = "0.1.0"
description = "Benchmark suite for evaluating multi-agent coding harnesses."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness_suite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
