[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness-suite"
version = "0.1.0"
description = "Benchmark suite for evaluating coding agent harnesses on top of the Inspect AI backbone."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "inspect-ai>=0.3.220",
    "inspect-harbor>=0.5.1",
    "inspect-swe @ git+https://github.com/meridianlabs-ai/inspect_swe.git@ced0f0e30698f164de9816a25c62f6269d324d8b",
    # Required by inspect-ai's agent bridge to translate Anthropic-format
    # requests inside the bridge proxy, even when routing to a non-Anthropic model.
    "anthropic>=0.40",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
ahs = "ahs.runner:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahs"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["inspect_swe.*", "inspect_harbor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
